--- a/styles.css
+++ b/styles.css
@@ -6,18 +6,30 @@ section {
 	text-align: center;
 }
 
+.score {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	gap: 25px;
+}
+
+.score div {
+	border: 1px solid gray;
+	padding: 10px;
+}
+
 .game-grid-container {
 	display: grid;
 	grid-template-columns: 5% 25% 5% 25% 5% 25% 5%;
 	grid-template-rows: 5% 25% 5% 25% 5% 25% 5%;
 	width: 400px;
 	height: 400px;
-	margin: 100px auto;
+	margin: 20px auto;
 }
 
 .dot {
-	width: 10px;
-	height: 10px;
+	width: 15px;
+	height: 15px;
 
 	border-radius: 50px;
 	margin: auto;
@@ -71,4 +83,69 @@ section {
 	background-color: blue;
 	animation-name: filler;
 	animation-duration: 0.5s;
+}
+
+.modal {
+	width: 300px;
+	padding: 40px 10px;
+	margin: auto;
+	background-color: aquamarine;
+	border-radius: 10px;
+	text-align: center;
+	display: flex;
+	flex-direction: column;
+	gap: 20px;
+	position: absolute;
+	left: 50%;
+	top: 50%;
+	transform: translate(-50%, -50%);
+	z-index: 100;
+}
+
+.winner-box {
+	width: 80%;
+	margin: auto;
+	text-align: center;
+	border: 2px solid green;
+	border-radius: 5px;
+}
+
+.red span {
+	color: red;
+}
+
+.blue span {
+	color: blue;
+}
+
+.retry-game {
+	width: 150px;
+	background-color: green;
+	display: block;
+	font-size: inherit;
+	font-family: inherit;
+	color: rgb(197, 193, 193);
+	outline: none;
+	border: none;
+	border-radius: 5px;
+	margin: auto;
+	padding: 10px;
+	transition: all 0.3s ease-in-out;
+}
+
+.retry-game:hover {
+	background-color: rgb(30, 180, 30);
+	color: rgb(231, 230, 230);
+}
+
+.backdrop {
+	width: 100%;
+	height: 100%;
+	background-color: rgba(83, 81, 81, 0.5);
+	z-index: 50;
+	position: absolute;
+	left: 50%;
+	top: 50%;
+	transform: translate(-50%, -50%);
+	z-index: 100;
 }
